# suoke_life

./: .claude.yml  .cursorrules  .cursorrules.en  .cursorrules.zh  .editorconfig  .env.development  .env.example  .env.production  .env.template  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.optimization.js  .flake8  .gitignore  .gitleaks.toml  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .pylintrc  .snyk  .watchmanconfig  100_PERCENT_COMPLETION_BADGE.txt  ACCESSIBILITY_INTEGRATION_SUMMARY.md  ACCESSIBILITY_SERVICE_EVALUATION_SUMMARY.md  ACCESSIBILITY_SERVICE_INTEGRATION_REPORT.md  ACHIEVEMENT_BADGE.txt  ADVANCED_ACCESSIBILITY_SERVICES_COMPLETION.md  ADVANCED_FEATURES_COMPREHENSIVE_REPORT.md  ADVANCED_SYNTAX_FIX_REPORT.json  AGENT_CHAT_SYSTEM_COMPLETION_REPORT.md  AGENT_SERVICES_OPTIMIZATION_COMPREHENSIVE_REPORT.md  AGENT_SERVICES_OPTIMIZATION_SUMMARY.md  API_INTEGRATION_COMPREHENSIVE_REPORT.md  API_INTEGRATION_TEST_REPORT.json  API_PERFORMANCE_VALIDATION_REPORT.json  APP_STARTUP_GUIDE.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  (+291 more)
services/a2a-agent-network/: .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Dockerfile  Makefile  PROJECT_STATUS_FINAL.md  QUICKSTART.md  README.md  UPGRADE_SUMMARY.md  docker-compose.yml  final_verify.py  fix_agent_manager_tests.py  fix_agent_response.py  fix_failure_test.py  fix_health_check_test.py  fix_performance_tests.py  fix_test_agent_manager.py  pyproject.toml  requirements.txt  simple_verify.py  test_integration.py  verify_deployment.py
services/accessibility-service/: .gitignore  .pylintrc  .ruff.toml  ACCESSIBILITY_SERVICE_COMPLETION_REPORT.md  ACCESSIBILITY_SERVICE_EVALUATION_REPORT.md  ACCESSIBILITY_SERVICE_FIX_SUMMARY.md  ACCESSIBILITY_SERVICE_MIGRATION_REPORT.md  ACTION_PLAN_EXECUTION_SUMMARY.md  CLEANUP_REPORT.md  CODE_QUALITY_ANALYSIS_REPORT.md  CODE_QUALITY_SUMMARY.md  COMPREHENSIVE_ANALYSIS_FINAL_REPORT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  EVALUATION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_COMPLETION_REPORT.md  LICENSE  LONG_TERM_ROADMAP.md  MANIFEST.in  MIDTERM_IMPROVEMENT_REPORT.md  MIDTERM_OPTIMIZATION_COMPLETION_REPORT.md  Makefile  NEXT_PHASE_EXECUTION_REPORT.md  OPTIMIZATION_EXECUTION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_MIDTERM_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  REFACTORING_COMPLETION.md  RELEASE_NOTES.md  SCIENTIFIC_COMPUTING_COMPLETION_REPORT.md  SECURITY_FIXES_REPORT.md  SHORT_TERM_OPTIMIZATION_REPORT.md  UV_MIGRATION_COMPLETION_REPORT.md  VALIDATION_SUMMARY.md  (+52 more)
services/ai-model-service/: Dockerfile  README.md  cloud_model_manager.py  pyproject.toml
services/api-gateway/: .coverage  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.optimized  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  UV_MIGRATION_COMPLETE.md  config.env.example  docker-compose.yml  monkey_patch.py  optimized_async_gateway.py  optimized_async_gateway.py.backup_priority  pyproject.toml  requirements-clean.txt  requirements.txt
services/auth-service/: .coverage  .gitignore  AUTH_SERVICE_100_PERCENT_COMPLETION_REPORT.md  AUTH_SERVICE_ANALYSIS_REPORT.md  CLEANUP_SUMMARY.md  CODE_QUALITY_ANALYSIS_REPORT.md  CODE_QUALITY_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.optimized  FINAL_100_PERCENT_COMPLETION_REPORT.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_PROGRESS.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  README.md  TODO_COMPLETION_REPORT.md  alembic.ini  docker-compose.yml  env.example  nginx.conf  pyproject.toml  pytest.ini  quick_start.sh  requirements-clean.txt  requirements.txt  run_server.py  test_improvements_summary.md  verify_completion.py
services/blockchain-service/: .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DEVELOPMENT_COMPLETION_ANALYSIS.md  Dockerfile  FINAL_COMPLETION_SUMMARY.md  FINAL_MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_OPTIMIZATION.md  README_OPTIMIZATION_COMPLETE.md  alembic.ini  blockchain_pb2.py  blockchain_pb2_grpc.py  blockchain_pb2_grpc.py.backup_advanced  deep_optimization.py  demo_blockchain_service.py  demo_blockchain_service.py.backup_advanced  demo_mock_mode.py  demo_mock_mode.py.backup_advanced  docker-compose.yml  env.example  fix_comprehensive_syntax.py  fix_critical_syntax.py  fix_source_syntax.py  fix_test_syntax.py  main.py  pyproject.toml  pytest.ini  requirements-clean.txt  requirements.txt  requirements.txt.bak  test_basic_import.py  test_exceptions_quick.py  test_quick.py  verify_optimization.py
services/common/: .gitignore  .pre-commit-config.yaml  DATABASE_REMOVAL_SUMMARY.md  INFRASTRUCTURE_ASSESSMENT.md  Makefile  OPTIMIZATION_SUMMARY.md  PYTHON_OPTIMIZATION_REPORT.md  README.md  __init__.py  db_config.yaml  error_handler.py  error_handler.py.backup_advanced  hybrid_architecture.py  hybrid_architecture.py.backup_advanced  intelligent_task_scheduler.py  intelligent_task_scheduler.py.backup_advanced  pyproject.toml  requirements.txt  shared_memory_processor.py  shared_memory_processor.py.backup_advanced  uv.toml
services/corn-maze-service/: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  Dockerfile  Makefile  NEXT_PHASE_OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  corn_maze_pb2.py  corn_maze_pb2_grpc.py  corn_maze_pb2_grpc.py.backup_advanced  env.example  main.py  pyproject.toml  requirements-clean.txt  requirements.txt  requirements.txt.bak  test_next_phase_optimization.py  test_optimization.py  test_optimization_simple.py
services/health-data-service/: .env.example  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.optimized  FINAL_COMPLETION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  POSTGRESQL_MIGRATION_GUIDE.md  PROJECT_COMPLETION_FINAL_REPORT.md  README.md  README_PIPELINE.md  TCM_FIVE_DIAGNOSES_IMPLEMENTATION_REPORT.md  alembic.ini  docker-compose.yml  (+8 more)
(+15016 files in other folders)
