[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suoke-accessibility-service"
version = "2.0.0"
description = "索克生活无障碍服务 - 提供全方位的AI驱动无障碍功能支持"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "索克生活团队", email = "dev@suoke.life"}
]
maintainers = [
    {name = "索克生活团队", email = "dev@suoke.life"}
]
keywords = ["accessibility", "ai", "health", "suoke", "tcm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13.3"
dependencies = [
    # FastAPI 核心框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.1.0",
    
    # 异步和并发
    "asyncio-mqtt>=0.16.1",
    "aiofiles>=23.2.1",
    "aioredis>=2.0.1",
    
    # HTTP 客户端
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    
    # 数据库
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.1",
    "asyncpg>=0.30.0",
    
    # AI 和机器学习 (Python 3.13 兼容版本)
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchaudio>=2.2.1",
    "transformers>=4.36.0",
    "opencv-python>=4.8.1",
    # "mediapipe>=0.10.8",  # 暂时注释，等待Python 3.13支持
    # "openai-whisper>=20231117",  # 暂时注释，构建问题待解决
    "ultralytics>=8.0.0",
    
    # 图像和视频处理
    "pillow>=10.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # 音频处理
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    # "pyaudio>=0.2.11",  # 暂时注释，可能需要系统级依赖
    
    # 自然语言处理
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "jieba>=0.42.1",
    
    # 健康平台集成
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "wechatpy>=1.8.18",
    "alipay-sdk-python>=3.7.603",
    
    # 安全和认证
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    
    # 监控和日志
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.38.0",
    
    # 配置和环境
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    
    # 工具库
    "python-multipart>=0.0.6",
    "email-validator>=2.2.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.3.0",
    
    # 代码质量
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    
    # 文档
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    
    # 调试和分析
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.1",
]

gpu = [
    # GPU 加速版本
    "torch[cuda]>=2.2.1",
    "torchvision[cuda]>=0.17.1",
    "torchaudio[cuda]>=2.2.1",
    "cupy-cuda12x>=12.3.0",
]

production = [
    # 生产环境依赖
    "gunicorn>=21.2.0",
    "gevent>=23.9.0",
    "newrelic>=9.2.0",
]

[project.urls]
Homepage = "https://github.com/SUOKE2024/suoke_life"
Documentation = "https://docs.suoke.life/accessibility"
Repository = "https://github.com/SUOKE2024/suoke_life"
Issues = "https://github.com/SUOKE2024/suoke_life/issues"
Changelog = "https://github.com/SUOKE2024/suoke_life/blob/main/CHANGELOG.md"

[project.scripts]
accessibility-service = "accessibility_service.cmd.server.main:main"
accessibility-cli = "accessibility_service.cli:main"

[tool.hatch.version]
path = "accessibility_service/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["accessibility_service"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["accessibility_service", "suoke_life"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "torch"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-argument
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "FLY", # flynt
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
unfixable = ["B"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["ARG001", "S101"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "torchaudio.*",
    "cv2.*",
    "mediapipe.*",
    "whisper.*",
    "ultralytics.*",
    "librosa.*",
    "soundfile.*",
    "pyaudio.*",
    "jieba.*",
    "spacy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=accessibility_service",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "ai: marks tests that require AI models",
    "asyncio: marks tests as async tests",
]

[tool.coverage.run]
source = ["accessibility_service"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["test", "tests"]
skips = ["B101", "B601"]

[tool.vulture]
exclude = ["test/", "tests/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["_*", "test_*"]
make_whitelist = true
min_confidence = 60
paths = ["accessibility_service"]
sort_by_size = true
verbose = false
